tests/conditional/conditional.exp
Error ----------------------------------------------------- conditional.js:23:24

Cannot return `x != null ? x : x != null` because number is incompatible with
string.


Error ----------------------------------------------------- conditional.js:23:29

Cannot return `x != null ? x : x != null` because boolean is incompatible with
string.



Found 2 errors
